--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AP-AI | Manufacturing Quote Request</title>
+    <title>AP-AI - Manufacturing Quote Request</title>
   </head>
   <body>
     <div id="root"></div>
