--- a/public/email-templates/quote-notification.html
+++ b/public/email-templates/quote-notification.html
@@ -179,7 +179,7 @@
               <td style="padding-bottom: 8px;">
                 <p class="label" style="margin: 0 0 2px 0; font-size: 12px; font-weight: 700; color: #18181b;">Summary:</p>
                 <p class="value" style="margin: 0; font-size: 15px;">
-                  <a href="{{summaryLink}}" style="color: #3b82f6; text-decoration: underline; font-weight: 400;">linktomarkdownfile.md</a>
+                  <a href="{{summaryLink}}" style="color: #3b82f6; text-decoration: underline; font-weight: 400;">{{summaryFileName}}</a>
                 </p>
               </td>
             </tr>
