--- a/public/email-templates/quote-notification.html
+++ b/public/email-templates/quote-notification.html
@@ -18,6 +18,7 @@
   </noscript>
   <![endif]-->
   <title>New Quote Request Received</title>
+  <!-- Cache bust: 2026-02-17 -->
   <style>
     /* Reset styles */
     body, table, td, a { 
